added all templates

--- a/porfolio/core/templates/index.html
+++ b/porfolio/core/templates/index.html
@@ -10,7 +10,7 @@
                 <div class="block wow fadeInUp" data-wow-delay=".3s">
                     <section class="cd-intro">
                         <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
-                            <span>HI, MY NAME  IS BRIAN & I AM A</span><br>
+                            <span>HI, MY NAME  IS KEVIN & I AM A</span><br>
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">DESIGNER</b>
                                 <b>DEVELOPER</b>
