--- a/porfolio/core/templates/footer.html
+++ b/porfolio/core/templates/footer.html
@@ -6,7 +6,7 @@
                     <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">SO WHAT DO YOU THINK ?
                         </h1>
                         <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Impressed or in need of any clarification? Feel free to contact me by pressing the below button or via my social handles below.</p>
-                        <a href="mailto:bryomajor@gmail.com?Subject=Hello%Brian" target="_top" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s"
+                        <a href="mailto:kilikevin435@gmail.com?Subject=Hello%Kili" target="_top" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s"
                             data-wow-duration="500ms">Contact Me</a>
                 </div>
             </div>
@@ -19,29 +19,24 @@
     <div class="container">
         <div class="col-md-8">
             <p class="copyright">&copy; <span>
-                    <script>document.write(new Date().getFullYear())</script></span> Brian's Portfolio.
+                    <script>document.write(new Date().getFullYear())</script></span> Kili's Portfolio.
             </p>
         </div>
         <div class="col-md-4">
             <!-- Social Media -->
             <ul class="social">
                 <li>
-                    <a href="https://www.linkedin.com/in/brian-otieno-101550b7/" class="Linkedin" target="_blank">
+                    <a href="https://www.linkedin.com/feed/?trk=onboarding-landing" class="Linkedin" target="_blank">
                         <i class="ion-social-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/bryomajor" class="Github">
+                    <a href="https://github.com/kilitasha435" class="Github">
                         <i class="ion-social-github"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/bilal.bryian.fierce" class="Facebook" target="_blank">
-                        <i class="ion-social-facebook"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/Bryomajor" class="Twitter" target="_blank">
+                    <a href="https://twitter.com/login" class="Twitter" target="_blank">
                         <i class="ion-social-twitter"></i>
                     </a>
                 </li>
