--- a/porfolio/core/templates/index.html
+++ b/porfolio/core/templates/index.html
@@ -14,11 +14,12 @@
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">DESIGNER</b>
                                 <b>DEVELOPER</b>
+                                <b>ENTERPRENUER</b>
                             </span>
                         </h1>
                     </section>
                     <h2 class="wow fadeInUp animated" data-wow-delay=".6s">
-                        With 4 years experience, I've occupied many roles including graphic designer,<br> web designer and developer. This site showcases some of my work.
+                        With 1 year experience, I've occupied many roles including graphic designer,<br> web designer and developer. This site showcases some of my work.
                     </h2>
                     <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="#works">View Works</a>
                 </div>
