--- a/porfolio/core/static/css/style.css
+++ b/porfolio/core/static/css/style.css
@@ -97,7 +97,7 @@ a:hover {
 }
 
 .fancybox-close {
-  background: url("../images/icons/close.png") no-repeat scroll 0 0 transparent;
+  background: url("../images/icons/close.jpeg") no-repeat scroll 0 0 transparent;
   height: 50px;
   right: 0;
   top: 0;
