--- a/porfolio/core/templates/index.html
+++ b/porfolio/core/templates/index.html
@@ -10,10 +10,10 @@
                 <div class="block wow fadeInUp" data-wow-delay=".3s">
                     <section class="cd-intro">
                         <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
-                            <span>HI, MY NAME  IS KEVIN & I AM A</span><br>
+                            <span>HI, MY NAME  IS KEVIN KILI & I AM A</span><br>
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">DESIGNER</b>
-                                <b>DEVELOPER</b>
+                                <b>WEB DEVELOPER</b>
                                 <b>ENTERPRENUER</b>
                             </span>
                         </h1>
@@ -36,12 +36,12 @@
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
                     <h2>ABOUT ME</h2>
-                    <p>I'm a Full Stack Developer from Nairobi, Kenya. Am also a freelance graphic designer with extensive experience in the information technology and services industry. I have a knack for user experience and beautiful interfaces with a focus in becoming a fully-fledged Fullstack Developer.</p>
+                    <p>I'm a Full Stack Web Developer from Nairobi, Kenya. Am also a freelance graphic designer with extensive experience in the information technology and services industry. I have a knack for user experience and beautiful interfaces with a focus in becoming a fully-fledged Fullstack Developer.</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="{% static 'images/about.jpg' %}" class="img-responsive" alt="">
+                    <img src="{% static 'images/about.jpeg' %}" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
