--- a/porfolio/core/templates/navbar.html
+++ b/porfolio/core/templates/navbar.html
@@ -14,7 +14,7 @@
         <!-- logo -->
         <div class="navbar-brand">
           <a href="/">
-            <img src="{% static 'images/logo.jpg' %}" alt="" class="img-responsive" height="50">
+            <img src="{% static 'images/logo.png' %}" alt="" class="img-responsive" height="35%" width="45%">
           </a>
         </div>
         <!-- /logo -->
