--- a/porfolio/core/templates/footer.html
+++ b/porfolio/core/templates/footer.html
@@ -27,17 +27,22 @@
             <ul class="social">
                 <li>
                     <a href="https://www.linkedin.com/feed/?trk=onboarding-landing" class="Linkedin" target="_blank">
-                        <i class="ion-social-linkedin"></i>
+                        <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/kilitasha435" class="Github">
-                        <i class="ion-social-github"></i>
+                        <i class="fa fa-github"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/login" class="Twitter" target="_blank">
-                        <i class="ion-social-twitter"></i>
+                    <a href="https://twitter.com" class="Twitter" target="_blank">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" class="Instagram" target="_blank">
+                        <i class="fa fa-instagram"></i>
                     </a>
                 </li>
             </ul>
