--- a/porfolio/core/static/css/style.css
+++ b/porfolio/core/static/css/style.css
@@ -105,7 +105,7 @@ a:hover {
 }
 
 .fancybox-next span {
-  background: url("../images/icons/right.png") no-repeat scroll center center #009ee3;
+  background: url("../images/about.jpeg") no-repeat scroll center center #009ee3;
   height: 50px;
   width: 50px;
   right: 0;
@@ -303,9 +303,12 @@ a:hover {
   color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+.kili{
+  background-image: url('https://images.pexels.com/photos/1181298/pexels-photo-1181298.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+}
 
 #hero-area {
-  background: url("../images/slider.jpg") no-repeat 50%;
+  background: url("https://images.pexels.com/photos/1181298/pexels-photo-1181298.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500") no-repeat 50%;
   background-size: cover;
   background-attachment: fixed;
   padding: 230px 0;
